<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid </string>
    <string name="hazardous_asteroid_image">Hazardous asteroid </string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="image_of_day_label">Image of the day</string>
    <string name="help_button">Help button</string>
    <string name="distance_from_earth_placeholder">0.0924 au</string>
    <string name="relative_velocity_placeholder">11.9 km/s</string>
    <string name="estimated_diameter_placeholder">0.82 km</string>
    <string name="absolute_magnitude_placeholder">25.126 au</string>
    <string name="close_approach_date_placeholder" tools:ignore="TypographyDashes">2020–02-01</string>
    <string name="asteroid_name_placeholder">XXXX (XXXX XXXX)</string>
</resources>
