<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.domain.Asteroid" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_background">

            <ImageView
                android:id="@+id/activity_main_image_of_the_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/asteroid_safe" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/close_approach_data_title"
                            android:textColor="@color/default_text_color" />

                        <TextView
                            android:id="@+id/close_approach_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small_margin"
                            android:text="@{asteroid.closeApproachDate}"
                            android:textColor="@color/default_text_color"
                            tools:text="@string/close_approach_date_placeholder" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/absolute_magnitude_title"
                                android:textColor="@color/default_text_color" />

                            <TextView
                                android:id="@+id/absolute_magnitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/small_margin"
                                android:textColor="@color/default_text_color"
                                app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                                tools:text="@string/absolute_magnitude_placeholder" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/help_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/help_button"
                            android:padding="@dimen/medium_padding"
                            app:srcCompat="@drawable/ic_help_circle" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/estimated_diameter_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/estimated_diameter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:textColor="@color/default_text_color"
                        app:kmUnitText="@{asteroid.estimatedDiameter}"
                        tools:text="@string/estimated_diameter_placeholder" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/relative_velocity_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/relative_velocity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:textColor="@color/default_text_color"
                        app:velocityText="@{asteroid.relativeVelocity}"
                        tools:text="@string/relative_velocity_placeholder" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/distance_from_earth_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/distance_from_earth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:textColor="@color/default_text_color"
                        app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                        tools:text="@string/distance_from_earth_placeholder" />

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>